<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">



    <TextView
        android:id="@+id/bienvenidoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenidos a AzNotes"
        android:layout_marginTop="10dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:transitionName="textTrans"/>

    <TextView
        android:id="@+id/continuarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inicia sesión para continuar"
        android:textSize="24sp"
        android:transitionName="iniciaSesionTextTrans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/usuarioTextField"
            android:transitionName="emailInputTextTrans"
            android:hint="Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/contrasenaTextField"
            android:hint="Contraseña"
            android:transitionName="passwordInputTextTrans"
            app:passwordToggleEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/olvidasteContra"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="20dp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:text="Olvidaste tu contraseña?"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INICIO"
            android:transitionName="buttonSignInTrans"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="end"
            android:visibility="invisible"
            android:layout_marginBottom="50dp"/>

        "
        <TextView
            android:id="@+id/nuevoUsuario"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="Eres nuevo? Registraste ¡Ahora!"
            android:transitionName="newUserTrans"/>

    </LinearLayout>

</LinearLayout>