...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context=".ProfileInfoActivityMichel">

    <TextView
        android:id="@+id/saludoProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="42dp"
        android:text="Hola Mario"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
...
