<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/signUpImageView"
        android:layout_width="40dp"
        android:layout_height="10dp"
        android:transitionName="LogoImageTrans"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/bienvenidoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido,"
        android:layout_marginTop="14dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="textTrans"/>

    <TextView
        android:id="@+id/continuarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registraste para empezar a usar AzNotes"
        android:textSize="24sp"
        android:transitionName="iniciaSesionTextTrans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextField"
            android:hint="Nombre completo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usuarioSignUpTextField"
            android:hint="Email"
            android:transitionName="emailInputTextTrans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:inputType="textWebEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contrasenaTextField"
            android:hint="Contraseña"
            android:transitionName="passwordInputTextTrans"
            app:passwordToggleEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmarContrasenaTextField"
            android:hint="Confirmar contraseña"
            app:passwordToggleEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/inicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRAR"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:transitionName="buttonSignInTrans"/>

        <TextView
            android:id="@+id/nuevoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:text="Ya tienes una cuenta? Inicia sesión!"
            android:transitionName="newUserTrans"/>

    </LinearLayout>
</LinearLayout>